k8s/old/ingress-default-dotnet-works-com.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-default-dotnet-works-com-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # Rewrite url to always go to /
    # This metadata will only apply to the rules mentioned in this file
    # Othe Ingress services can have their own annotations
    nginx.ingress.kubernetes.io/rewrite-target: /
    # By setting the cluster-issuer the shim will not automatically create certs
    # When adding other ingress services you will usually not specify this annotation
    # That means that the default wildcard certificate will be used
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
  - hosts:
    - '*.dotnet-works.com'
    - dotnet-works.com
    secretName: dotnet-works-com-wildcard-tls
  rules:
    - host: '*.dotnet-works.com'
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: default-backend-service
                port:
                  number: 5000
